
  * Commit window now supports commit of selected changes (record-style)
    or shelving of selected changes.
    Modified, Added, and Removed files are preselected for commit.
    Added a ctrl-o key accelerator for initiating a commit.
    Added support for refreshing an applied MQ patch.
    Improved support for merge (two parent) commits.

  * Synchronize window now supports reading bundle files (*.hg).
    Recognizes whether it has been launched in push or pull mode

  * The changelog window can now generate bundle files 
    Multiline change summaries can optionally be concatenated

  * New rename window for simple file or directory renames.

  * New rename guessing dialog for detecting renames after they happen.

  * New tool for managing an .hgignore file.

  * The configuration window has been reorganized for simplicity.

  * Nautilus: Fixed file version detection.

  * Hgtk: added --limit option to log.
          added aliases to dialogs that support many operations.
          added rename and guess commands.

New features and improvement in 0.6:

  * Updated to Mercurial 1.1.X (1.1.2, as of release). 
  
    WARNING:
    The GUI tools in TortoiseHg 0.6, including hgtk, have been updated to work
    exclusively with Merecurial 1.1.X, and will not work with older (pre 1.1), 
    and perhaps even the later, releases of Mercurial.
  
  * Explorer shell extensions:
    - Display all available menus in primary context menu, with non-applicable
      menu items disabled per selected objects.
    - Improved 'sensitivity' of context menus. For example, the 'Create 
      Repository Here' menu will be disabled if the selected object is a file.

  * General improvement and updates:
    - Tab characters in source/diff lines can be expanded optionally with the
      new 'tabwidth' config option.
    - All commit dates are now displayed in local time, with time zone info.
    - GUI opearations are immuned to mercurial commands defaults (defined in